--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Maxwell Asante <adiomi90@outlook.com>
+Isreal Agi <isrealkhan217@gmail.com>
